# cosmos-sdk

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  go.mod  go.sum
.github/workflows/: apple-platforms.yml  auto-assign-prs.yml  ci-maros-mobile.yml  ci.yml
api/: go.mod  go.sum
baseapp/: baseapp.go  baseapp_close_test.go
client/v2/: go.mod  go.sum
depinject/: go.mod  go.sum
examples/simple-app/: README.md
indexer/postgres/tests/: go.mod  go.sum
math/: go.mod  go.sum
mobile/: .gitignore  build.gradle.kts  settings.gradle.kts
mobile/androidApp/: build.gradle.kts  google-services.sample.json
mobile/androidApp/src/main/: AndroidManifest.xml
mobile/androidApp/src/main/java/com/maurofanelli/app/: MainActivity.kt
mobile/androidApp/src/main/java/com/maurofanelli/app/ui/: App.kt
mobile/androidApp/src/main/res/values/: strings.xml
mobile/core/: build.gradle.kts
mobile/core/src/androidMain/kotlin/com/maurofanelli/app/core/: Platform.kt
mobile/core/src/commonMain/kotlin/com/maurofanelli/app/core/: Greeting.kt  Platform.kt
mobile/core/src/commonTest/kotlin/com/maurofanelli/app/core/: GreetingTest.kt
mobile/core/src/iosMain/kotlin/com/maurofanelli/app/core/: Platform.kt
mobile/core/src/jvmMain/kotlin/com/maurofanelli/app/core/: Main.kt  Platform.kt
mobile/gradle/: libs.versions.toml
mobile/ios/: GoogleService-Info.sample.plist
mobile/ios/MarOS.xcodeproj/: project.pbxproj
mobile/ios/MarOS.xcodeproj/xcshareddata/xcschemes/: MarOS-tvOS.xcscheme  MarOS-watchOS.xcscheme  MarOS.xcscheme
mobile/ios/Shared/: ContentView.swift  MarOSApp.swift
mobile/ios/iOS/: ContentView.swift  Info.plist
mobile/ios/tvOS/: ContentView.swift  Info.plist  tvOSApp.swift
mobile/ios/watchOS/: ContentView.swift  Info.plist  watchOSApp.swift
orm/: go.mod  go.sum
polkadot-compat/: Cargo.toml  README.md
polkadot-compat/node/: Cargo.toml
polkadot-compat/node/src/: cli.rs  main.rs
polkadot-compat/runtime/: Cargo.toml
polkadot-compat/runtime/src/: cosmos.rs  lib.rs
polkadot-compat/src/: lib.rs
runtime/v2/: go.mod  go.sum
server/v2/: go.mod  go.sum
server/v2/cometbft/: go.mod  go.sum
simapp/: go.mod  go.sum
simapp/v2/: go.mod  go.sum
simsx/: environment.go
store/: go.mod  go.sum
store/v2/: go.mod  go.sum
systemtests/: go.mod  go.sum
tests/: go.mod  go.sum
tests/systemtests/: go.mod  go.sum
tools/benchmark/: go.mod  go.sum
tools/confix/: go.mod  go.sum
tools/cosmovisor/: go.mod  go.sum
tools/hubl/: go.mod  go.sum
x/accounts/: go.mod
x/accounts/defaults/base/: go.mod  go.sum
x/accounts/defaults/lockup/: go.mod  go.sum
x/accounts/defaults/multisig/: go.mod
x/authz/: go.mod
x/bank/: go.mod
x/circuit/: go.mod
x/consensus/: go.mod
x/distribution/: go.mod
x/epochs/: go.mod
x/evidence/: go.mod
x/feegrant/: go.mod  go.sum
x/gov/: go.mod  go.sum
x/gov/simulation/: msg_factory.go
x/group/: go.mod  go.sum
x/mint/: go.mod
x/nft/: go.mod  go.sum
x/params/: go.mod  go.sum
x/polkadot-bridge/: bridge.go
x/protocolpool/: go.mod  go.sum
x/slashing/: go.mod  go.sum
x/staking/: go.mod
x/tx/decode/: unknown.go
x/upgrade/: go.mod  go.sum
