[workspace]
members = [
    "polkadot-compat",
]
resolver = "2"

[workspace.package]
authors = ["Cosmos SDK Team"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://cosmos.network"
repository = "https://github.com/cosmos/cosmos-sdk"
version = "0.1.0"

# For now, include minimal dependencies
[workspace.dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"